--- a/package.json
+++ b/package.json
@@ -51,12 +51,18 @@
     "node": ">=8.9"
   },
   "dependencies": {
+    "@octokit/rest": "^15.12.0",
+    "express-session": "^1.15.6",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "ava": "1.0.0-beta.7",
     "codecov": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-ejs-layouts": "^2.5.0",
     "gh-pages": "^1.2.0",
     "npm-run-all": "^4.1.3",
     "nyc": "^12.0.2",
@@ -64,11 +70,12 @@
     "prettier": "^1.13.4",
     "standard-version": "^4.4.0",
     "trash-cli": "^1.4.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-immutable": "^4.5.4",
     "typedoc": "^0.12.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.3"
   },
   "ava": {
     "failFast": true,
